--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -5735,7 +5735,7 @@
             text-align: left
         }
     </style>
-    <link type="text/css" rel="stylesheet" charset="UTF-8" href="./jurliyuuri.com_files/translateelement.css">
+    <link type="text/css" rel="stylesheet" charset="UTF-8" href="http://jurliyuuri.com/lineparine/images/translateelement.css">
 </head>
 
 <body class="c151 c226">
@@ -5853,6 +5853,7 @@
     <ul class="c78 lst-kix_v0gywj11yv38-0 start">
         <li class="c12 c17"><span class="c0">일본어 문법 용어인 '연체형'(連体形)은 우리말의 '관형사형'과 비슷하나 리팔라인어에서는 다르게 동작할 수 있으므로 일단 '연체형'으로 그대로 번역하였다.</span></li>
         <li class="c12 c17"><span class="c0">'법제사'(法制詞) 및 '상위사'(相位詞)는 리팔라인어 특유의 품사로, 우리말의 종결어미와 비슷한 개념으로 볼 수 있다. '초보자를 위한 리팔라인어'를 따라 '서법 품사'로 번역하였다. </span></li>
+        <li class="c12 c17"><span class="c0">리팔라인어를 다루는 모임 総合創作界隈悠里는 '종합창작모임 유리'로 뜻을 풀어 번역하였다. (創作界隈는 한국의 '커뮤'와 비슷한 개념으로 보인다)</span></li>
     </ul>
     <hr style="page-break-before:always;display:none;">
     <p class="c12 c8"><span class="c0"></span></p>
@@ -6842,7 +6843,7 @@
                 라네메어족 유래 이름</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
             class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.ad3pbwstr485">128</a></span></p>
     <p class="c42"><span class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.2herxzyhsqep">12.4.2.3.3.
-                리나에스트어족 유래 이름リナエスト語族由来の名前</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
+                리나에스트어족 유래 이름</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
             class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.2herxzyhsqep">128</a></span></p>
     <p class="c42"><span class="c0"><a class="c26" href="{{ site.baseurl }}/syntax-lineparine/#h.lx94hamrgsf1">12.4.2.3.4.
                 위고크어 유래 이름</a></span><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span
@@ -6986,49 +6987,49 @@
     <h1 class="c47" id="h.egnmrxtbcw2"><span class="c85 c72">0. 언어의 개요</span></h1>
     <h2 class="c55 c51" id="h.agvqrly1v61"><span class="c86 c72">0.1. 지리・계통</span></h2>
     <p class="c12"><span
-            class="c0">&nbsp;本文法書で扱うリパライン語は正式名称を「現代標準リパライン語」といい、『総合創作界隈悠里』と創作世界観『大宇宙』に含まれる言語である。シアン大語族リパラオネ語族ユナ・リパラオネ語派に属する。</span>
+            class="c0">&nbsp;본 문법서에서 다루는 리팔라인어의 정식 명칭은 '현대표준 리팔라인어'라 하며, "종합창작모임 유리"와 창작세계관 "대우주"에 포함되는 언어이다. 시안대어족 리팔라오네 어족 유나・리팔라오네 어파에 속한다.</span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;『悠里』では異世界ファイクレオネの유에슬레오네連邦を中心に広い地域で話されている。유에슬레오네連邦とPMCF（東諸島共和国連合）では公用語の地位にあり、ハタ王国などでは第一外国語として教育されている。</span>
+            class="c0">&nbsp;"유리"에서는 이세계 파이클레오네의 유에슬레오네 연방을 중심으로 넓은 지역에서 사용되고 있다. 유에슬레오네 연방과 PMCF (동제도공화국연방)에서는 공용어의 지위로, 하타 왕국 등에서는 제1 외국어로써 교육되고 있다.</span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;『大宇宙』ではファルトクノア共和国を初めとして、アポラ星系国際連盟（P.J.C.Q.D.）、ロフィルナ連邦共同体（ラーツォルペン公国）、チャンタ民主戦線共和国などで公的な地位を持つ。</span>
+            class="c0">&nbsp;"대우주"에서는 팔토크노아 공화국을 시작으로, 아폴라 성계국제연맹 (P.J.C.Q.D.), 로피르나 연방공동체 (라촐펜 공국), 찬타 민주전선공화국 등에서 공적인 지위를 가진다.</span>
     </p>
-    <h2 class="c55 c51" id="h.sjf9ms4gpprl"><span class="c72 c86">0.2. 話者数・民族構成・産業</span></h2>
+    <h2 class="c55 c51" id="h.sjf9ms4gpprl"><span class="c72 c86">0.2. 화자수・민족구성・산업</span></h2>
     <p class="c12"><span
-            class="c0">&nbsp;正確な民族の比率や言語社会学的環境、また時代によっての変遷を含めて考えるとリパライン語の話者数を正確に記述することは難しい。リパラオネ人全体のうちの75%がユナ・リパラオネ人であるとすれば母語（第一言語）話者の数は4億1400万人から28億1400万人の間と概算できる。これに加えて諸国に広がる第二言語としての話者を加算すると80億人前後なのではないかと考えられている。</span>
-    </p>
-    <p class="c12"><span
-            class="c0">&nbsp;ユナ・リパラオネ人、ヴェフィス人、ラネーメ系リパラオネ人が主に母語話者として存在しており、第二言語話者としてはユーゲ人、パイルターファ・ラネーメ人、リナエスト人が大半である。少数の話者民族としてはツォルマール人、チャンタ人、北方系ラペア人、Ancutavaist、Mancutavaistなどが居る。</span>
+            class="c0">&nbsp;정확한 민족의 비율이나 언어사회학적 환경, 또는 시대에 따른 변화를 고려한다면 리팔라인어의 화자수를 정확히 기술하기는 어렵다. 리팔라오네인 전체 중에 75%가 유나・리팔라오네인이라고 한다면 모어(제1 언어) 화자의 수는 4억 1400만명부터 28억 1400만명 사이로 추정할 수 있다. 여기에 더해 제국에 퍼져있는 제2 언어로써의 화자의 수를 더하면 80억명 전후가 아닐까 생각된다.</span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;リパライン語は広く国際的に話されているため特定の産業と結びついていることはないが、イェスカ主義などの思想やウェールフープに関する技術はリパライン語を広める要因の一つになっている。</span>
-    </p>
-    <h2 class="c55 c51" id="h.3umpyir4ad1d"><span class="c86 c72">0.3. 教育・メディア・活発度</span></h2>
-    <p class="c12"><span
-            class="c0">&nbsp;유에슬레오네連邦では、ピリフィアー歴2005年10月に言語集中政策（LZEL）が策定されており、その中の「多数派社会・言語教育」として国民統合の言語として現代標準リパライン語が全ての国民に無料で教育を受けられる。ハタ王国やPMCFでは重要な外国語であるとして主要な外国語科目として扱われており、活発度は高い。</span>
+            class="c0">&nbsp;유나・리팔라오네인, 베피스인, 라네메계 리팔라오네인이 주로 모어화자로 존재하며, 제 2언어 화자로는 유게인, 파이르타파・라네메인, 리나에스트인이 대부분이다. 소수의 화자 민족으로 촐마르인, 찬타인, 북방계 라페아인, Ancutavaist, Mancutavaist 등이 있다.</span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;リパライン語メディアや著作は活発に出版活動が行われており、また古典的なテクストとしてのスキュリオーティエ叙事詩や宗教文献などにも強い興味が向けられている。</span></p>
+            class="c0">&nbsp;리팔라인어는 넓고 국제적으로 사용되고 있기 때문에 특정한 산업과 연관되고 있지는 않지만, 예스카주의 등의 사상이나 웰푸프와 관련된 기술은 리팔라인어를 퍼트리는 요인 중 하나가 되었다.</span>
+    </p>
+    <h2 class="c55 c51" id="h.3umpyir4ad1d"><span class="c86 c72">0.3. 교육・미디어・활성화율</span></h2>
+    <p class="c12"><span
+            class="c0">&nbsp;유에슬레오네 연방에서는 필리피아력 2005년 10월에 언어집중정책(LZEL)가 책정되며, 그 중 '다수파 사회·언어교육'과 국민통합의 언어로써 현대표준 리팔라인어가 모든 국민에게 무료로 교육되고 있다. 하타왕국이나 PMCF에서는 중요한 외국어라 하여 중요 외국어과목으로써 다뤄지며 활성화율이 높다. </span>
+    </p>
+    <p class="c12"><span
+            class="c0">&nbsp;리팔라인어 미디어나 저작물의 출판 또한 활발히 이루어지고 있으며, 고전적인 텍스트로써 스큘리오티에 서사시나 종교문헌 등도 높은 관심을 받고 있다.</span></p>
     <hr style="page-break-before:always;display:none;">
     <p class="c12 c8"><span class="c0 c151"></span></p>
-    <h1 class="c47" id="h.sfefrv4j8hkt"><span class="c85 c72">1. 文字と発音</span></h1>
-    <h2 class="c55 c51" id="h.s2w9jyqe4z7l"><span class="c86 c72">1.1. 文字</span></h2>
-    <h3 class="c34" id="h.30m93yp5flr5"><span class="c73 c72">1.1.1. 文字の一覧</span></h3>
-    <h4 class="c32" id="h.5e3xmov2uci"><span class="c19">1.1.1.1. 文字の概要</span></h4>
-    <p class="c12"><span class="c0">&nbsp;現代標準リパライン語（以下、リパライン語）はデュテュスン・リパーシェ(理: dytysn
-            liparxe、「新しいリパーシェ」)を使って表記される。デュテュスン・リパーシェは基本的には30文字が用いられるが、これに加えて記号類や特殊な状況下で用いられる記号も存在する。デュテュスン・リパーシェには下の表に示している活字体の他に碑文体、書写体、筆記体、手記体などの字体が存在している。</span>
+    <h1 class="c47" id="h.sfefrv4j8hkt"><span class="c85 c72">1. 문자와 발음</span></h1>
+    <h2 class="c55 c51" id="h.s2w9jyqe4z7l"><span class="c86 c72">1.1. 문자</span></h2>
+    <h3 class="c34" id="h.30m93yp5flr5"><span class="c73 c72">1.1.1. 문자 일람</span></h3>
+    <h4 class="c32" id="h.5e3xmov2uci"><span class="c19">1.1.1.1. 문자의 개요</span></h4>
+    <p class="c12"><span class="c0">&nbsp;현대 표준 리팔라인어(이하 리팔라인어)는 뒤튀슨 리파셰(리어: dytysn
+            liparxe, '새로운 리파셰')를 사용하여 표기된다. 뒤튀슨리파셰는 기본적으로 30문자가 사용되나, 이를 포함해 기호류나 특수한 상황 하에서 사용되는 기호도 존재한다. 뒤튀슨 리파셰에는 아래의 표에 적힌 활자체 이외에 비석문체, 서적체, 필기체, 글씨체 등의 자형이 존재한다. </span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;デュテュスン・リパーシェは一つの文字が一つの母音、または子音という音素を表すアルファベットであり、基本的には綴りの規則に沿って読まれる。数字などを除いて綴りの規則に従わずに単語を訓読することはまず無い。</span>
+            class="c0">&nbsp;뒤튀슨 리파셰는 하나의 문자가 하나의 모음이나 자음과 같은 음소를 표시하는 알파벳이며, 기본적으론 맞춤법 규칙에 따라 읽힌다. 숫자를 제외하고 맞춤법 규칙을 따르지 않고 단어를 읽는 방법은 거의 없다. </span>
     </p>
     <p class="c12"><span
-            class="c0">&nbsp;現実世界ではデュテュスン・リパーシェを用いることが出来ない場合が多く、ラテン文字転写で書かれる場合が多い。以下の表の通り、転写とデュテュスン・リパーシェはほぼ一対一で対応する。</span>
+            class="c0">&nbsp;현실세계에선 뒤튀슨 리파셰를 사용하는 것이 불가능한 경우가 많으므로 라틴문자 전사로 작성되는 경우가 많다. 이하의 표와 같이 라틴문자와 뒤튀슨 리파셰 사이에는 거의 일대일 대응이 존재한다. </span>
     </p>
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c1"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 567.50px; height: 460.03px;"><img
-                alt="" src="./jurliyuuri.com_files/image4.png"
+                alt="" src="http://jurliyuuri.com/lineparine/images/image4.png"
                 style="width: 567.50px; height: 460.03px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                 title=""></span></p>
     <p class="c12 c8"><span class="c0"></span></p>
@@ -7039,7 +7040,7 @@
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c1"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 445.34px; height: 279.50px;"><img
-                alt="" src="./jurliyuuri.com_files/image5.jpg"
+                alt="" src="http://jurliyuuri.com/lineparine/images/image5.jpg"
                 style="width: 492.73px; height: 562.27px; margin-left: -27.78px; margin-top: -6.54px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                 title=""></span></p>
     <p class="c12 c8"><span class="c0"></span></p>
@@ -7047,7 +7048,7 @@
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c1"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 538.00px; height: 403.26px;"><img
-                alt="" src="./jurliyuuri.com_files/image2.jpg"
+                alt="" src="http://jurliyuuri.com/lineparine/images/image2.jpg"
                 style="width: 538.00px; height: 403.26px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                 title=""></span></p>
     <h3 class="c34" id="h.ywxqi8qj3p8q"><span class="c73 c72">1.1.2. 文字の名称と音価</span></h3>
@@ -7058,7 +7059,7 @@
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c1"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 328.45px; height: 231.50px;"><img
-                alt="" src="./jurliyuuri.com_files/image3.jpg"
+                alt="" src="http://jurliyuuri.com/lineparine/images/image3.jpg"
                 style="width: 328.45px; height: 231.50px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                 title=""></span></p><a id="t.d912c844a1c7be9727e2febd4d4f34bf06903645"></a><a id="t.0"></a>
     <table class="c33">
@@ -7758,7 +7759,7 @@
             d-zのデュテュスン・リパーシェで二文字が繋がる場合はその間に分離記号ъの付して区別する。</span></p>
     <p class="c12"><span
             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 393.35px; height: 199.50px;"><img
-                alt="" src="./jurliyuuri.com_files/image1.png"
+                alt="" src="http://jurliyuuri.com/lineparine/images/image1.png"
                 style="width: 393.35px; height: 199.50px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                 title=""></span></p>
     <hr style="page-break-before:always;display:none;">
@@ -22144,7 +22145,7 @@
     <div id="goog-gt-tt" class="skiptranslate" dir="ltr">
         <div style="padding: 8px;">
             <div>
-                <div class="logo"><img src="./jurliyuuri.com_files/translate_24dp.png" width="20" height="20"
+                <div class="logo"><img src="http://jurliyuuri.com/lineparine/images/translate_24dp.png" width="20" height="20"
                         alt="Google 번역"></div>
             </div>
         </div>
