--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -8052,27 +8052,27 @@
     </ul>
     <p class="c12"><span class="c0">Falira.lyjotafisの印象であり、証明はされていない。</span></p>
     <h3 class="c34" id="h.wqz9s75zkoyi"><span class="c73 c72">1.2.5. 연음</span></h3>
-    <p class="c12"><span>単語が連なった場合の発音や音韻の変化を</span><span class="c2">연음</span><span>と呼ぶ。リパライン語ではいずれの연음も</span><span
-            class="c63">必ず発生するものではなく</span><span>、話者が</span><span
-            class="c63">自由にそれを決めることが出来る</span><span>。単語内で発生する연음を</span><span
-            class="c2">内연음</span><span>と呼び、単語間で発生する연음を</span><span class="c2">外연음</span><span class="c0">と呼ぶ。</span></p>
-    <h4 class="c32" id="h.ygc61bxngy75"><span class="c19">1.2.5.1. 内연음</span></h4>
-    <h5 class="c13" id="h.jxqkxkngy328"><span class="c54">1.2.5.1.1. 単語クラス</span></h5>
-    <p class="c12"><span>単語には</span><span class="c2">単語クラス</span><span
-            class="c0">が与えられる。単語クラスは語の最後の母音(語幹母音)で分けられる。</span></p>
+    <p class="c12"><span>단어가 연속된 경우에 발생하는 발음이나 음운의 변화를</span><span class="c2">연음</span><span>이라 한다. 리팔라인 언어에서는 그 어떤 연음도</span><span
+            class="c63">반드시 발생하는 것은 아니며</span><span>, 화자가</span><span
+            class="c63">자유롭게 연음을 선택할 수 있다</span><span>. 단어 안에서 발생하는 연음을</span><span
+            class="c2">내연음</span><span>이라 부르며, 단어 사이에서 발생하는 연음을 </span><span class="c2">외연음</span><span class="c0">이라 부른다.</span></p>
+    <h4 class="c32" id="h.ygc61bxngy75"><span class="c19">1.2.5.1. 내연음</span></h4>
+    <h5 class="c13" id="h.jxqkxkngy328"><span class="c54">1.2.5.1.1. 단어 계열 </span></h5>
+    <p class="c12"><span>리팔라인어의 단어에는 </span><span class="c2">단어 계열</span><span
+            class="c0">이 부여된다. 단어 계열은 단어의 가장 마지막 모음 (어간모음)에 의해 분류된다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.70d38f9586987823b52b566c264a43ab175d9166"></a><a
         id="t.3"></a>
     <table class="c33">
         <tbody>
             <tr class="c4">
                 <td class="c102" colspan="1" rowspan="1">
-                    <p class="c16"><span class="c3 c2">語幹母音</span></p>
+                    <p class="c16"><span class="c3 c2">어간모음</span></p>
                 </td>
                 <td class="c79" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c3 c2">単語クラス</span></p>
+                    <p class="c12"><span class="c3 c2">단어계통</span></p>
                 </td>
                 <td class="c74" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c3 c2">例</span></p>
+                    <p class="c12"><span class="c3 c2">예</span></p>
                 </td>
             </tr>
             <tr class="c4">
@@ -8080,8 +8080,8 @@
                     <p class="c12"><span class="c0 c115">a(r),o(r)</span></p>
                 </td>
                 <td class="c79 c115" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c0 c115">紅クラス</span></p>
-                    <p class="c12"><span class="c0 c115">クラス１</span></p>
+                    <p class="c12"><span class="c0 c115">붉은 계열</span></p>
+                    <p class="c12"><span class="c0 c115">계열 1</span></p>
                 </td>
                 <td class="c74 c115" colspan="1" rowspan="1">
                     <p class="c12"><span class="c0 c115">flarska, lyjot, fqa, pernal</span></p>
@@ -8092,8 +8092,8 @@
                     <p class="c12"><span class="c0 c53">e(r),i(r)</span></p>
                 </td>
                 <td class="c79 c53" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c0 c53">蒼クラス</span></p>
-                    <p class="c12"><span class="c0 c53">クラス２</span></p>
+                    <p class="c12"><span class="c0 c53">푸른 계열</span></p>
+                    <p class="c12"><span class="c0 c53">계열 ２</span></p>
                 </td>
                 <td class="c74 c53" colspan="1" rowspan="1">
                     <p class="c12"><span class="c0 c53">lineparine, meiaqerz, harmie, alefis</span></p>
@@ -8104,8 +8104,8 @@
                     <p class="c12"><span class="c0 c59">u(r)</span></p>
                 </td>
                 <td class="c79 c59" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c0 c59">烏クラス</span></p>
-                    <p class="c12"><span class="c0 c59">クラス３</span></p>
+                    <p class="c12"><span class="c0 c59">검정 계열</span></p>
+                    <p class="c12"><span class="c0 c59">계열 3</span></p>
                 </td>
                 <td class="c59 c74" colspan="1" rowspan="1">
                     <p class="c12"><span class="c0 c59">ydun, sysnul, kraxaiun, liestu</span></p>
@@ -8116,8 +8116,8 @@
                     <p class="c12"><span class="c0">y(r)</span></p>
                 </td>
                 <td class="c79 c134" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c0">葵クラス</span></p>
-                    <p class="c12"><span class="c0">クラス４</span></p>
+                    <p class="c12"><span class="c0">무늬 계열</span></p>
+                    <p class="c12"><span class="c0">계열 4</span></p>
                 </td>
                 <td class="c74 c134" colspan="1" rowspan="1">
                     <p class="c12"><span class="c0">nyey, dijyk, snyr, chely</span></p>
