--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -8069,7 +8069,7 @@
                     <p class="c16"><span class="c3 c2">어간모음</span></p>
                 </td>
                 <td class="c79" colspan="1" rowspan="1">
-                    <p class="c12"><span class="c3 c2">단어계통</span></p>
+                    <p class="c12"><span class="c3 c2">단어 계열</span></p>
                 </td>
                 <td class="c74" colspan="1" rowspan="1">
                     <p class="c12"><span class="c3 c2">예</span></p>
@@ -8126,14 +8126,13 @@
         </tbody>
     </table>
     <p class="c12 c8"><span class="c0"></span></p>
-    <p class="c12"><span>クラスは緩衝音の適用に関係し、緩衝音の適用は常に単語としての最終母音によって決まる単語クラスに影響される。</span></p>
+    <p class="c12"><span>계열은 완충음의 적용과 연관되며, 완충음 적용은 항상 단어의 최종 모음에 의해 결정되는 단어 계열의 영향을 받는다.</span></p>
     <hr style="page-break-before:always;display:none;">
     <p></p>
-    <h5 class="c13" id="h.y5fazlr7h5sv"><span class="c54">1.2.5.1.2. 緩衝音</span></h5>
-    <p class="c12"><span>接辞が単語に付く時に子音または母音が連続するのを防ぐために挿入される音のことを</span><span
-            class="c2">緩衝音</span><span>と呼ぶ。母音の連続を防ぐ緩衝音を</span><span
-            class="c2">緩衝子音</span><span>、子音の連続を防ぐ緩衝音を</span><span class="c2">緩衝母音</span><span>と呼ぶ。なお、一部の形態素（-j,
-            -tなど）が繋がるときには緩衝音を</span><span class="c63">入れてはならない</span><span class="c0">場合があるので注意すること。</span></p>
+    <h5 class="c13" id="h.y5fazlr7h5sv"><span class="c54">1.2.5.1.2. 완충음</span></h5>
+    <p class="c12"><span>접사가 단어에 붙을 때, 자음 또는 모음이 연속하는 것을 막기 위해 주입되는 음을 </span><span
+            class="c2">완충음</span><span>이라 부른다. 모음이 연속하는 것을 막는 완충음을 </span><span
+            class="c2">완충자음</span><span>, 자음이 연속되는 것을 막는 완충음을 </span><span class="c2">완충모음</span><span>이라 부른다. 또한, 일부 형태소 (-j, -t 등)이 연결되는 때에는 완충음을 </span><span class="c63">넣어서는 안되는</span><span class="c0">상황이 있으므로 주의하여야 한다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.1c7a6524ec2b16efbd3bec1089e3eb19caa6adfa"></a><a
         id="t.4"></a>
     <table class="c33">
@@ -8143,16 +8142,16 @@
                     <p class="c6"><span class="c3 c2"></span></p>
                 </td>
                 <td class="c50" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">緩衝子音</span></p>
+                    <p class="c7"><span class="c3 c2">완충자음</span></p>
                 </td>
                 <td class="c50" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">緩衝子音の例</span></p>
+                    <p class="c7"><span class="c3 c2">완충자음 예시</span></p>
                 </td>
                 <td class="c50" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">緩衝母音</span></p>
+                    <p class="c7"><span class="c3 c2">완충모음</span></p>
                 </td>
                 <td class="c50" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">緩衝母音の例</span></p>
+                    <p class="c7"><span class="c3 c2">완충모음 예시</span></p>
                 </td>
             </tr>
             <tr class="c4">
@@ -8232,9 +8231,9 @@
             </tr>
             <tr class="c4">
                 <td class="c50 c134" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">葵クラス</span></p>
+                    <p class="c7"><span class="c3 c2">무늬 계열</span></p>
                     <p class="c6"><span class="c3 c2"></span></p>
-                    <p class="c7"><span class="c3 c2">クラス４</span></p>
+                    <p class="c7"><span class="c3 c2">계열 4</span></p>
                 </td>
                 <td class="c50 c58" colspan="1" rowspan="1">
                     <p class="c7"><span class="c0 c58">-l-</span></p>
@@ -8255,13 +8254,13 @@
             </tr>
             <tr class="c36">
                 <td class="c50 c134" colspan="1" rowspan="1">
-                    <p class="c7"><span class="c3 c2">調音接頭辞</span></p>
+                    <p class="c7"><span class="c3 c2">조음접두사</span></p>
                 </td>
                 <td class="c50 c58" colspan="1" rowspan="1">
                     <p class="c7"><span class="c0 c58">-eu/eu-</span></p>
                 </td>
                 <td class="c134 c204" colspan="3" rowspan="1">
-                    <p class="c7"><span class="c0">発音しにくい子音連続に対して適用される</span></p>
+                    <p class="c7"><span class="c0">발음하기 어려운 자음연속에 대해 적용한다</span></p>
                 </td>
             </tr>
         </tbody>
