--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -7055,7 +7055,7 @@
                 title=""></span></p>
     <h3 class="c34" id="h.ywxqi8qj3p8q"><span class="c73 c72">1.1.2. 문자의 명칭과 음가</span></h3>
     <p class="c12"><span
-            class="c0">&nbsp;영어의 알파벳이 에이, 비, 씨 등의 문자명을 가진것과 같이 뒤튀슨 리파셰에도 문자명이 있다. 여기에선 각 문자의 문자명과 음가에 대해 해설한다.</span></p>
+            class="c0">&nbsp;영어의 알파벳이 에이, 비, 씨 등의 문자명을 가진것과 같이 뒤튀슨 리파셰에도 문자명이 있다. 여기에선 각 문자의 문자명과 음가에 대해 해설한다. [역주: 문자 이름의 한국어 표기는 '초보자를 위한 리팔라인어'를 참고할 것]</span></p>
     <h4 class="c32" id="h.fls8rticii7"><span class="c19">1.1.2.1. 모음</span></h4>
     <p class="c12"><span class="c0">&nbsp;리팔라인어에는 모음이 총 6개 있다. 아래의 그림은 모음 음소가 나타내는 음가의 범위를 표시하였다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p>
@@ -7074,7 +7074,7 @@
                     <p class="c16"><span class="c0">이름(전사)</span></p>
                 </td>
                 <td class="c29" colspan="1" rowspan="1">
-                    <p class="c16"><span class="c0">이름(한글)</span></p>
+                    <p class="c16"><span class="c0">이름(가나)</span></p>
                 </td>
                 <td class="c149" colspan="1" rowspan="1">
                     <p class="c16"><span class="c0">표준음</span></p>
@@ -7191,8 +7191,8 @@
     <p class="c12"><span class="c0">모은에는 장단음이 존재하며 리팔라인어는 이 장단음의 대립을 구별한다.</span></p>
     <p class="c12"><span class="c0">장모음을 표기할 때는 모음의 뒤에 r을 붙인다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p>
-    <p class="c12"><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Le レ ～よりも</span></p>
-    <p class="c12"><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ler レー ～から, ～によって</span></p>
+    <p class="c12"><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Le 레 -보다도</span></p>
+    <p class="c12"><span class="c0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ler 레- -부터, -에 의해</span></p>
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c12"><span class="c0">또한 리팔라인어에선 모음을 강모음 a, o, e와 약모음 i, u, y로 분류한다. 이는 뒤에 나올 발음규칙과 관계된다.</span></p>
     <hr style="page-break-before:always;display:none;">
@@ -7209,7 +7209,7 @@
                     <p class="c16"><span class="c0">이름(전사)</span></p>
                 </td>
                 <td class="c29" colspan="1" rowspan="1">
-                    <p class="c16"><span class="c0">이름(한글)</span></p>
+                    <p class="c16"><span class="c0">이름(가나)</span></p>
                 </td>
                 <td class="c149" colspan="1" rowspan="1">
                     <p class="c16"><span class="c0">표준음</span></p>
@@ -7978,57 +7978,56 @@
     <h2 class="c55 c51" id="h.5hnjcr5977dm"><span class="c86 c72">1.2. 발음</span></h2>
     <h3 class="c34" id="h.q1q2oep2wmmf"><span class="c73 c72">1.2.1. 정의</span></h3>
     <ol class="c78 lst-kix_jbomoqtlb6fp-0 start" start="1">
-        <li class="c12 c17"><span class="c0">同じ子音字を重ねたものを"促音(telokners)"と呼ぶ, これは長子音として発音する。</span></li>
-        <li class="c12 c17"><span class="c0">dz, x, sh, chを"軟子音/弱子音(ixtrixerfinisn)"と呼ぶ。</span></li>
-        <li class="c12 c17"><span class="c0">a, o, e, 全ての長母音を"強母音(xerfinisnejt)"と呼び, i, y,
-                uを"弱母音(xerfinisertz)"と呼ぶ。</span></li>
+        <li class="c12 c17"><span class="c0">같은 자음자를 중첩한 것을 "촉음(telokners)"이라 부르며, 장자음으로 발음한다.</span></li>
+        <li class="c12 c17"><span class="c0">dz, x, sh, ch를 "연자음/약자음(ixtrixerfinisn)"이라 부른다.</span></li>
+        <li class="c12 c17"><span class="c0">a, o, e, 모든 장모음을 "강모음(xerfinisnejt)"이라 부르며, i, y,
+                u을 "약모음(xerfinisertz)"이라 부른다。</span></li>
     </ol>
     <h3 class="c34" id="h.pc95bmz6gca8"><span class="c73 c72">1.2.2. 구・문어 공통 발음규칙</span></h3>
     <ol class="c78 lst-kix_1jo0rvac6qru-0 start" start="1">
-        <li class="c12 c17"><span class="c0">iの後に母音が来るとjで発音する。</span></li>
-        <li class="c12 c17"><span class="c0">y, uの後に母音が来るもしくは母音の後の音節末では[ɥ], [w]で発音することがある。</span></li>
-        <li class="c12 c17"><span class="c0">母音の後にrが来ると長母音になる。</span></li>
-        <li class="c12 c17"><span class="c0">jの前後共に母音が来ない場合は, iで発音される。</span></li>
-        <li class="c12 c17"><span class="c0">母音の後にi,uが来て, (間にアポストロフィが入っても良い)その後にrが来ない場合はj,wに変わって発音する場合がある。ただし, iu,
-                yuのuはwにならない。</span></li>
-        <li class="c12 c17"><span class="c0">phはfかpで発音する。</span></li>
-        <li class="c12 c17"><span class="c0">sのあとに母音が無い場合[s]で発音する。</span></li>
-        <li class="c12 c17"><span class="c0">軟子音+i/j+Vの音節でi/jが発音されない場合がある。</span></li>
+        <li class="c12 c17"><span class="c0">i의 뒤에 모음이 오면 j로 발음한다.</span></li>
+        <li class="c12 c17"><span class="c0">y, u의 뒤에 모음이 오거나 모음 뒤의 음절 끝에서는 [ɥ], [w]로 발음하는 경우가 있다.</span></li>
+        <li class="c12 c17"><span class="c0">모음의 뒤에 r이 오면 장모음이 된다.</span></li>
+        <li class="c12 c17"><span class="c0">j의 앞뒤로 모두 모음이 오지 않는 경우에는 i로 발음된다.</span></li>
+        <li class="c12 c17"><span class="c0">모음의 뒤에 i, u가 오고 (사이에 '가 들어가도 됨) 그 뒤에 r가 오지 않는 경우엔 j, w로 바꾸어 발음하는 경우가 있다. 하지만 iu, yu의 u는 w가 되지 않는다. </span></li>
+        <li class="c12 c17"><span class="c0">ph는 f나 p로 발음한다.</span></li>
+        <li class="c12 c17"><span class="c0">s의 다음에 모음이 없는 경우 [s]로 발음한다.</span></li>
+        <li class="c12 c17"><span class="c0">연자음 +i/j+V의 음절에서 i/j가 발음되지 않는 경우가 있다.</span></li>
     </ol>
     <ol class="c78 lst-kix_1jo0rvac6qru-1 start" start="1">
-        <li class="c12 c61"><span class="c0">発音されない場合, Vは長母音化する。</span></li>
+        <li class="c12 c61"><span class="c0">발음되지 않는 경우, V는 장모음화된다.</span></li>
     </ol>
     <ol class="c78 lst-kix_1jo0rvac6qru-0" start="9">
-        <li class="c12 c17"><span class="c0">tz, sx, ddz, tth, ddhはz, x, dz, th, dhの促音で読む(但し, cxはxの促音ではない)</span></li>
+        <li class="c12 c17"><span class="c0">tz, sx, ddz, tth, ddh는 z, x, dz, th, dh의 촉음으로 읽는다. (하지만, cx는 x의 촉음이 아니다)</span></li>
     </ol>
     <ol class="c78 lst-kix_1jo0rvac6qru-1 start" start="1">
-        <li class="c12 c61"><span class="c0">本来, cxはxの促音ではないがより新しい発音では促音として扱われる場合がある。これに関しては誤りであるという規範意識が働く場合が多い。</span>
+        <li class="c12 c61"><span class="c0">본래 cx는 x의 촉음이 아니지만 최신 발음에서는 촉음으로 다루어지는 경우가 있다. 이에 대해서는 잘못된 발음이라는 규범의식이 작동하는 경우가 많다.</span>
         </li>
     </ol>
     <ol class="c78 lst-kix_1jo0rvac6qru-0" start="10">
-        <li class="c12 c17"><span class="c0">語尾の-en(特に-nen)のeは[ə]で発音される場合がある。</span></li>
-        <li class="c12 c17"><span class="c0">語尾の-genは[ɣ(ə)n]で発音される可能性がある。</span></li>
-        <li class="c12 c17"><span class="c0">ni+V, nj+Vは[ɲ]になる。</span></li>
-        <li class="c12 c17"><span class="c0">sjVの発音は/zj/, /sj/の二種類が認められている。直後に母音が来ないsjは必ず/zi/。</span></li>
-        <li class="c12 c17"><span class="c0">軟子音+iuはCuで発音される。</span></li>
-        <li class="c12 c17"><span class="c0">軟子音j+yはCjuで発音される。</span></li>
+        <li class="c12 c17"><span class="c0">어미의 -en(특히-nen)의 e는 [ə]로 발음하는 경우가 있다.</span></li>
+        <li class="c12 c17"><span class="c0">어미의 -gen은 [ɣ(ə)n]으로 발음될 가능성이 있다.</span></li>
+        <li class="c12 c17"><span class="c0">ni+V, nj+V는 [ɲ]이 된다。</span></li>
+        <li class="c12 c17"><span class="c0">sjV의 발음은 /zj/, /sj/의 두 종류가 인정된다. 직후에 모음이 오지 않는 sj는 반드시 /zi/</span></li>
+        <li class="c12 c17"><span class="c0">연자음 + iu는 Cu로 발음한다.</span></li>
+        <li class="c12 c17"><span class="c0">연자음j + y는 Cju로 발음된다.</span></li>
     </ol>
     <h3 class="c34" id="h.qb6xilf62fbv"><span class="c119">1.2.</span><span>3</span><span class="c119">. </span><span
             class="c73 c72">구어의 예외발음</span></h3>
     <ol class="c78 lst-kix_p9whe9gnh9q3-0 start" start="1">
-        <li class="c12 c17"><span class="c0">語末のp(p), t(t), k(k)は内破音になる事がある。</span></li>
+        <li class="c12 c17"><span class="c0">어말의 p(p), t(t), k(k)는 내파음이 되는 경우가 있다.</span></li>
     </ol>
     <ol class="c78 lst-kix_p9whe9gnh9q3-1 start" start="1">
-        <li class="c12 c61"><span class="c0">これに該当しない二重子音語尾は -ss との類推で単子音化することがある。</span></li>
+        <li class="c12 c61"><span class="c0">이에 해당되지 않는 이중자음어미는 -ss와의 유추로 단자음화될 수 있다.</span></li>
     </ol>
     <ol class="c78 lst-kix_p9whe9gnh9q3-0" start="2">
-        <li class="c12 c17"><span class="c0">Vu, VwのVはəになることがある。</span></li>
-        <li class="c12 c17"><span class="c0">lは[ɾ]で発音される場合がある。</span></li>
-        <li class="c12 c17"><span class="c0">音節末のlは[ʟ]で発音する場合がある。</span></li>
-        <li class="c12 c17"><span class="c0">lの弱化やl-vocalizationが発生する場合がある。(mal /maw/のような)</span></li>
-        <li class="c12 c17"><span class="c0">成節子音n̩, l̩などが出る場合がある。(knloanやnotulなど)</span></li>
-        <li class="c12 c17"><span class="c0">アクセント母音が長母音化する(xale [ˈʂa:le], male [ˈma:le]など)</span></li>
-        <li class="c12 c17"><span class="c0">erlのeはəになる場合がある。</span></li>
+        <li class="c12 c17"><span class="c0">Vu, Vw의 V는 ə가 될 수 있다.</span></li>
+        <li class="c12 c17"><span class="c0">l은 [ɾ]로 발음되는 경우가 있다.</span></li>
+        <li class="c12 c17"><span class="c0">음절 끝의 l은 [ʟ]로 발음되는 경우가 있다.</span></li>
+        <li class="c12 c17"><span class="c0">l의 약화나 l-vocalization가 발생하는 경우가 있다. (mal /maw/과 같이)</span></li>
+        <li class="c12 c17"><span class="c0">성절자음 n̩, l̩ 등이 나오는 경우가 있다. (knloan이나 notul 등)</span></li>
+        <li class="c12 c17"><span class="c0">강세 모음은 장모음화된다(xale [ˈʂa:le], male [ˈma:le] 등)</span></li>
+        <li class="c12 c17"><span class="c0">erl의 e는 ə가 되는 경우가 있다.</span></li>
     </ol>
     <h3 class="c34" id="h.413juu7074j"><span class="c119">1.2.</span><span>4</span><span class="c119">. </span><span
             class="c73 c72">음렬의 금지사항</span></h3>
@@ -8349,31 +8348,31 @@
     <h3 class="c34" id="h.4o8ytm2t29jv"><span class="c73 c72">1.2.6. 강세</span></h3>
     <p class="c12"><span class="c0">강세는 단어의 어형에 의해 그 위치가 달라진다.</span></p>
     <ol class="c78 lst-kix_ljup71zi2z2-0 start" start="1">
-        <li class="c12 c17"><span class="c0">単音節単語→その母音にアクセント</span></li>
-        <li class="c12 c17"><span class="c0">長母音がない複音節単語→語末から二つ目の音節の母音</span></li>
-        <li class="c12 c17"><span class="c0">長母音がある複音節単語→最初の長母音</span></li>
+        <li class="c12 c17"><span class="c0">단음절 단어 → 그 모음에 강세</span></li>
+        <li class="c12 c17"><span class="c0">장모음기 없는 복음절 단어 → 단어 끝에서 두 번째 음절의 모음</span></li>
+        <li class="c12 c17"><span class="c0">장모음이 있는 복음절 단어 → 맨 처음 장모음</span></li>
     </ol>
     <p class="c12 c8"><span class="c0"></span></p>
-    <p class="c12"><span class="c0">しかし, 口語でのアクセント位置はこの規則に沿わない場合があり, 非規範的アクセントがどのような規則に沿っているのかは現在調査中である。</span></p>
+    <p class="c12"><span class="c0">하지만, 구어에서 강세 위치는 규칙을 따르지 않는 경우가 잇으며, 비규범적 강세가 어떤 규칙을 따르는 지는 현재 조사중이다.</span></p>
     <hr style="page-break-before:always;display:none;">
     <p class="c12 c8"><span class="c0"></span></p>
-    <h4 class="c32" id="h.ibxxw660j2db"><span class="c19">1.2.6.1. 口語におけるアクセント</span></h4>
-    <p class="c12"><span class="c0">一応以下の通り, 規則化はされているがアクセントにあまりこだわらないようなので間違えても大した違和感は出てこない。</span></p>
+    <h4 class="c32" id="h.ibxxw660j2db"><span class="c19">1.2.6.1. 구어의 강세</span></h4>
+    <p class="c12"><span class="c0">일단 아래와 같이 규칙화가 되어 있지만, 강세에 그다지 연연하지는 않기에 틀려도 큰 위화감은 들지 않는다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p>
     <ol class="c78 lst-kix_vbi1iy2yd4h5-0 start" start="1">
-        <li class="c12 c17"><span class="c0">短音節語→その母音。(Ex: mál, pá, déx, ját)</span></li>
-        <li class="c12 c17"><span class="c0">CVjVC→最初の母音の音節。(Ex: pójiv, téjien, déjix, jéjet)</span></li>
-        <li class="c12 c17"><span>二音節で, </span><span class="c2">長母音</span><span>が無く, </span><span
-                class="c63 c2">長音節</span><span class="c0">があれば→最初の長音節(gáble, lapún, záktles)</span></li>
-        <li class="c12 c17"><span>三音節以下で, </span><span class="c2">長母音</span><span class="c0">がある→最初の長母音の音節(lárde, lárdus,
+        <li class="c12 c17"><span class="c0">단음절 단어 → 그 모음 (Ex: mál, pá, déx, ját)</span></li>
+        <li class="c12 c17"><span class="c0">CVjVC → 최초 모음의 음절 (Ex: pójiv, téjien, déjix, jéjet)</span></li>
+        <li class="c12 c17"><span>두 음절으로, </span><span class="c2">장모음</span><span>이 없이, </span><span
+                class="c63 c2">장음절</span><span class="c0">이 있다면 → 최초의 장음절(gáble, lapún, záktles)</span></li>
+        <li class="c12 c17"><span>3음절 이하에서, </span><span class="c2">장모음</span><span class="c0">이 있음 → 최초의 장모음의 음절 (lárde, lárdus,
                 zérhes, tadýr, krafír)</span></li>
-        <li class="c12 c17"><span class="c2">長母音</span><span class="c0">がないか, 長母音のない四音節以上である→後ろから二つ目(zhívi, méle, xále,
+        <li class="c12 c17"><span class="c2">장모음</span><span class="c0">이 없지만, 장모음이 아닌 4음절 이상 → 마지막에서 두 번째(zhívi, méle, xále,
                 jújo, agléli’es, alfi'ánte)</span></li>
-        <li class="c12 c17"><span class="c2">長母音</span><span class="c0">があって, 四音節以上である→その長母音(atavérgilon,
+        <li class="c12 c17"><span class="c2">장모음</span><span class="c0">이 있으며, 4음절 이상 → 그 장음절 (atavérgilon,
                 vérliestraven)</span></li>
     </ol>
     <p class="c12 c8"><span class="c0"></span></p>
-    <p class="c12"><span class="c0">・備考</span></p>
+    <p class="c12"><span class="c0">・비고</span></p>
     <ul class="c78 lst-kix_wjcveud3monn-0 start">
         <li class="c12 c17"><span class="c0">V(‘)Vは一母音と捉える</span></li>
     </ul>
@@ -8409,7 +8408,7 @@
         <li class="c12 c61"><span class="c0">lápunu’s(原形語幹ではlapúnだが, 除外語幹がlapuであるため5.を適用)</span></li>
     </ul>
     <p class="c12 c8"><span class="c0"></span></p>
-    <p class="c12"><span class="c0">・考察中</span></p>
+    <p class="c12"><span class="c0">・고찰중</span></p>
     <ul class="c78 lst-kix_wjcveud3monn-0">
         <li class="c12 c17"><span class="c0">二音節目の(C)j/iVCにアクセントはつかない？</span></li>
     </ul>
@@ -11320,7 +11319,7 @@
     </table>
     <hr style="page-break-before:always;display:none;">
     <p class="c12 c8"><span class="c0"></span></p>
-    <h2 class="c55 c51" id="h.xab8kwkgwv1q"><span class="c86 c72">3.7. 옛 수사와 지시사古い数詞と指示詞</span></h2>
+    <h2 class="c55 c51" id="h.xab8kwkgwv1q"><span class="c86 c72">3.7. 옛 수사와 지시사</span></h2>
     <p class="c12"><span class="c0">옛 문장에서는 다음과 같은 옛 수사나 지시사가 사용되는 경우가 있다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.4427bab2ac59d2fbf1704b602b55b26f8869f6ac"></a><a
         id="t.141"></a>
