fill some holes

--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -10774,8 +10774,8 @@
     </table>
     <p class="c12 c8"><span class="c0"></span></p>
     <p class="c12"><span class="c0">기본적으로 단축수사는 기초수사로부터 qa와 그 이전의 모음자를 제거한 것이다. 하지만, 2를 나타내는 tu와 5를 나타내는 fa는 베피스어로부터 도입되었으며, 3을 나타내는 deu와 7을 나타내는 xene는 e(u)가 붙어있다.</span></p>
-    <h3 class="c34" id="h.ubggb7qs8u6b"><span class="c73 c72">3.6.2. 個数表現</span></h3>
-    <p class="c12"><span class="c0">数詞を用いて個数を説明する場合は属格で説明したい名詞を修飾することで表すことが出来る。</span></p>
+    <h3 class="c34" id="h.ubggb7qs8u6b"><span class="c73 c72">3.6.2. 개수 표현</span></h3>
+    <p class="c12"><span class="c0">수사를 사용하여 개수를 설명하는 경우에는 속격으로 명사를 수식함으로써 표현할 수 있다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.4e82b7a74729211de192c9f3bf9bea28cf964423"></a><a
         id="t.121"></a>
     <table class="c9">
@@ -10996,7 +10996,7 @@
             </tr>
             <tr class="c4">
                 <td class="c216 c114" colspan="1" rowspan="1">
-                    <p class="c1"><span class="c0">254000(古風)</span></p>
+                    <p class="c1"><span class="c0">254000(고풍)</span></p>
                 </td>
                 <td class="c154 c114" colspan="1" rowspan="1">
                     <p class="c1"><span>cananaqa</span><span class="c2">'d</span><span>&nbsp;cananeoqa</span><span
@@ -11107,7 +11107,7 @@
         </tbody>
     </table>
     <h3 class="c34" id="h.fcw3tz82sa71"><span class="c73 c72">3.6.6. 분수</span></h3>
-    <p class="c12"><span>분수는 </span><span class="c2">분모의 기수 -sta lut 분자의 기수</span><span class="c0">로 표현한다.</span></p>
+    <p class="c12"><span>분수는 </span><span class="c2">분모의 기수-sta lut 분자의 기수</span><span class="c0">로 표현한다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.31c2a8db6d9a5a75e2759c72a45816395d1fcaef"></a><a
         id="t.131"></a>
     <table class="c9">
@@ -11162,7 +11162,7 @@
         </tbody>
     </table>
     <h3 class="c34" id="h.j7bmsmoartwu"><span class="c73 c72">3.6.7. 제곱수</span></h3>
-    <p class="c12"><span>제곱수 표현은 접요사</span><span class="c2">-inie-</span><span class="c0">&nbsp;를 사용한다. A-inie-B
+    <p class="c12"><span>제곱수 표현은 접요사 </span><span class="c2">-inie-</span><span class="c0">&nbsp;를 사용한다. A-inie-B
             는 A의 B제곱을 말한다.</span></p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.df874fece25c52fa3e83c09ef4d7b23e425f526a"></a><a
         id="t.134"></a>
@@ -11265,7 +11265,7 @@
     </table>
     <h3 class="c34" id="h.2dremho590j6"><span class="c73 c72">3.6.9. 어림수</span></h3>
     <p class="c12"><span
-            class="c0">"대략 ~" "~정도의" "약 ~의" 등의 애매한 수를 표현할 때는 수사에 -ss를 붙아거나, lovik/xale/ancorten/nefeceilia/ro를 사용하는 등의 여러 방법이 있다.</span>
+            class="c0">"대략 ~", "~정도의", "약 ~의" 등의 애매한 수를 표현할 때는 수사에 -ss를 붙아거나, lovik/xale/ancorten/nefeceilia/ro를 사용하는 등의 여러 방법이 있다.</span>
     </p>
     <p class="c12 c8"><span class="c0"></span></p><a id="t.40b31d4c7ac9b4dd777c6087e9027e572361cae1"></a><a
         id="t.140"></a>
