--- a/_layouts/syntax.html
+++ b/_layouts/syntax.html
@@ -12715,7 +12715,7 @@
                 <td class="c31" colspan="1" rowspan="1">
                     <p class="c14"><span class="c39 c2">(예약)</span></p>
                 </td>
-                <td class="c92" colspan="1" rowspan="1">`
+                <td class="c92" colspan="1" rowspan="1">
                     <p class="c14"><span class="c39 c72">-ir</span></p>
                 </td>
             </tr>
